--- a/style.css
+++ b/style.css
@@ -1,30 +1,144 @@
-nav {
+/* Header ************************************************/
+
+.socialLinks {
 	width: 80px;
+}
+
+.socialLink:hover {
+	cursor: pointer;
 }
 
 header {
 	height: 80px;
 	background-color: #043E8A;
-}
-
-#mobileHeaderOff {
-	display: flex;
-}
-
-#mobileHeaderOn {
-	display: none;
-}
-
-#mobileHeaderOnBackground {
 	position: fixed;
 	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	background-color: #043E8A;
-	z-index: -1;
 }
 
-#mobileHeaderOnNav {
-	width: 100vw;
+#desktopHeaderUl {
+	width: 400px;
 }
+
+@media screen and (min-width: 1000px) {
+	li a {
+		font-size: 20px;
+	}
+	svg {
+		height: 32px;
+		width: 32px;
+	}
+}
+
+@media screen and (max-width: 1000px) {
+	li a {
+		font-size: 16px;
+	}
+	svg {
+		height: 25px;
+		width: 25px;
+	}
+}
+
+/* Main *********************************************/
+
+main {
+	margin-top: 80px;
+}
+
+
+/* About me page ************************************/
+
+.aboutMeArea {
+	background-color: #C7D7DD;
+}
+
+.aboutMeTitle,
+.aboutMeBlueP {
+	color: #043E8A;
+}
+
+.skillsContainer {
+	width: 210px;
+}
+
+.backEndContainer {
+	width: 200px;
+	border: 1px solid grey;
+	border-radius: 10px;
+	height: 8px;
+	background-color: white;
+}
+
+.backEndFill {
+	background-color: #043E8A;
+	width: 60%;
+	height: 6px;
+	border-radius: 10px;
+}
+
+.frontEndContainer {
+	width: 200px;
+	border: 1px solid grey;
+	border-radius: 10px;
+	height: 8px;
+	background-color: white;
+}
+
+.frontEndFill {
+	background-color: #043E8A;
+	width: 55%;
+	height: 6px;
+	border-radius: 10px;
+}
+
+.symfonyContainer {
+	width: 200px;
+	border: 1px solid grey;
+	border-radius: 10px;
+	height: 8px;
+	background-color: white;
+}
+
+.symfonyFill {
+	background-color: #043E8A;
+	width: 70%;
+	height: 6px;
+	border-radius: 10px;
+}
+
+.reactContainer {
+	width: 200px;
+	border: 1px solid grey;
+	border-radius: 10px;
+	height: 8px;
+	background-color: white;
+}
+
+.reactFill {
+	background-color: #043E8A;
+	width: 40%;
+	height: 6px;
+	border-radius: 10px;
+}
+
+.adobeContainer {
+	width: 200px;
+	border: 1px solid grey;
+	border-radius: 10px;
+	height: 8px;
+	background-color: white;
+}
+
+.adobeFill {
+	background-color: #043E8A;
+	width: 80%;
+	height: 6px;
+	border-radius: 10px;
+}
+
+.growthImage {
+	width: 70%;
+	object-fit: cover;
+}
+
+
