--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ main {
 
 .backEndFill {
 	background-color: #043E8A;
-	width: 60%;
+	width: 50%;
 	height: 6px;
 	border-radius: 10px;
 }
@@ -86,7 +86,7 @@ main {
 
 .frontEndFill {
 	background-color: #043E8A;
-	width: 55%;
+	width: 45%;
 	height: 6px;
 	border-radius: 10px;
 }
@@ -101,7 +101,7 @@ main {
 
 .symfonyFill {
 	background-color: #043E8A;
-	width: 70%;
+	width: 60%;
 	height: 6px;
 	border-radius: 10px;
 }
@@ -116,7 +116,7 @@ main {
 
 .reactFill {
 	background-color: #043E8A;
-	width: 40%;
+	width: 30%;
 	height: 6px;
 	border-radius: 10px;
 }
@@ -131,15 +131,17 @@ main {
 
 .adobeFill {
 	background-color: #043E8A;
-	width: 80%;
+	width: 70%;
 	height: 6px;
 	border-radius: 10px;
 }
 
-.growthImage {
-	width: 80%;
-	object-fit: contain;
-	max-width: 350px;
+.profileImage {
+	object-fit: cover;
+	width: 260px;
+	height: 300px;
+	border-radius: 50%;
+	border: 3px solid white;
 }
 
 /* Projects page ************************************/
@@ -148,10 +150,31 @@ main {
 	background-color: #043E8A;
 }
 
+.languageInfo {
+	color: lightgray;
+	font-size: 14px;
+}
+
 .projectContainer {
 	background-color: white;
 	height: 225px;
 	width: 320px;
+	position: relative;
+}
+
+.projectContainer::after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	background-color: #C7D7DD;
+	opacity: 0;
+}
+
+.projectContainer:hover::after {
+	opacity: 0.3;
 }
 
 .projectInfosContainer a {
@@ -164,7 +187,7 @@ main {
 }
 
 .projectContainer1 {
-	background-image: url(./images/recherche-emploi.png);
+	background-image: url(./images/photo-react-app.png);
 	background-position: center;
 	background-size: cover;
 }
@@ -175,8 +198,22 @@ main {
 	background-size: cover;
 }
 
+.projectContainer3 {
+	background-image: url(./images/jsGame.png);
+	background-position: center;
+	background-size: cover;
+}
+
+.projectInfosContainer {
+	background-color: rgba('4, 62, 138, .5');
+}
+
 .projectInfosContainer {
 	width: 300px;
+}
+
+.logins {
+	font-size: 14px;
 }
 
 @media screen and (min-width: 1200px) {
